# smart-trader

./: .dockerignore  .gitignore  BaseDockerfile  CLAUDE.md  DataEventLoop.py  Dockerfile  README.md  README_backtest.md  backtest_report_alpha_trend_ETHUSDT_15m_5m.txt  backtest_signal_grid.py  bidirectional_grid_rotation_task.py  bot_manager.py  calculate_pnl.py  config.py  data.parquet  data_event_loop.py  download_eth_data.py  klines.py  log.py  main.py  model.py  pyproject.toml  requirements.txt  run.py  run_alpha_trend_backtest.py  run_backtest.py  run_dev.py  run_top10_short.py  start.sh  start_using_docker.sh  strategies.json  strategies_dev.json  test_pd.py  test_run.py
.github/: copilot-instructions.md
api/: dependencies.py  main.py
backtest/: analyzer.py  backtest_client.py  backtest_event_loop.py  data_loader.py  multi_timeframe_backtest_event_loop.py
client/: binance_chaser_order.py  binance_client.py  binance_client_v2.py  bybit_client.py  ex_client.py  mexc_client.py  okx_client.py  order_actuator.py
event_loop/: base.py  binance.py
persistence/: __init__.py  database.py  exceptions.py  repository.py  sqlite_repo.py
plans/: binance_plan.py  bybit_swap_plan.py  okx_swap_plan.py
scripts/: bnb_coin_m_strategy.py  migrate_json_to_sqlite.py
strategy/: __init__.py  alpha_trend_strategy.py  bidirectional_grid_rotation_strategy.py  daily_trend_strategy.py  grids_strategy.py  grids_strategy_v2.py  none_strategy.py  scalping_strategy.py  signal_grid_strategy.py  simple_grid_strategy.py  simple_grid_strategy_v2.py
task/: backtest_task.py  (+3 more)
(+76 files in other folders)
